--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -884,6 +884,10 @@ table.patient-list {
   margin-left: 4px;
 }
 
+.view-switcher {
+  padding-top: 20px;
+}
+
 .view-switcher .btn-group .btn {
   padding: 10px 20px;
   margin-top: 4px;
