--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -686,6 +686,7 @@ table.patient-list {
 
 
 .view-switcher{
+    padding-top: 20px;
     .btn-group{
         .btn{
             padding: 10px 20px;
