--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -258,6 +258,14 @@
           <span ng-show="item.phased_treatment">X</span>
         </td>
       </tr>
+      <tr>
+        <td>
+          Highest BPE Sextant Score
+        </td>
+        <td>
+          <span ng-show="item.highest_bpe_score">[[ item.highest_bpe_score ]]</span>
+        </td>
+      </tr>
     </table>
   </div>
 </div>
