Adds validation for the bpe score and submits it with the FP17 forms

--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -119,6 +119,6 @@
 
 <div class="row content-offset-20">
   <div class="col-md-3">
-    {% select field="Fp17ClinicalDataSet.highest_bpe_score" style="vertical" %}
+    {% odonto_select field="Fp17ClinicalDataSet.highest_bpe_score" style="vertical" %}
   </div>
 </div>
