--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -91,6 +91,11 @@
     {% teeth field="Fp17ClinicalDataSet.decayed_teeth_deciduous" max="20" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
+    {% teeth field="Fp17ClinicalDataSet.untreated_decayed_teeth" max="32" %}
+  </div>
+</div>
+<div class="row content-offset-20">
+  <div class="col-md-1">
     {% teeth field="Fp17ClinicalDataSet.filled_teeth_permanent" max="32" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
