--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -196,6 +196,14 @@
       </tr>
       <tr>
         <td>
+          Untreated decayed teeth
+        </td>
+        <td>
+          [[ item.untreated_decayed_teeth ]]
+        </td>
+      </tr>
+      <tr>
+        <td>
           Decayed teeth deciduous
         </td>
         <td>
