Implements molar and non-molar endodontic treatments
CCN50 removes the use of the endodontic treatment after a certain date
and replaces them with molar/non-molar endodontic treatments.

This implements that and only shows the endodontic treatment if the user
has already populated this.

--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -34,12 +34,28 @@
           [[ item.radiographs_taken ]]
         </td>
       </tr>
-      <tr>
+      <tr ng-show="item.endodontic_treatment && item.endodontic_treatment !== 0">
         <td>
           Endodontic treatment
         </td>
         <td>
           [[ item.endodontic_treatment ]]
+        </td>
+      </tr>
+      <tr ng-hide="item.endodontic_treatment && item.endodontic_treatment !== 0">
+        <td>
+          Molar endodontic treatment
+        </td>
+        <td>
+          [[ item.molar_endodontic_treatment ]]
+        </td>
+      </tr>
+      <tr ng-hide="item.endodontic_treatment && item.endodontic_treatment !== 0">
+        <td>
+          Non-molar endodontic treatment
+        </td>
+        <td>
+          [[ item.non_molar_endodontic_treatment ]]
         </td>
       </tr>
       <tr>
