Adds in the associated dental practitioner to the models/forms/display
CCN49 Wants the GDC number and type of any practicioners who worked on a
form. This adds this in the same way as we do for the performer.

--- a/odonto/templates/forms/fp17_dental_care_provider_form.html
+++ b/odonto/templates/forms/fp17_dental_care_provider_form.html
@@ -1,4 +1,7 @@
 {% load odonto_forms %}
+{% comment %}
+This form is never used
+{% endcomment %}
 <div class="row">
   <div class="col-md-5">
     {% odonto_select field="Fp17DentalCareProvider.performer" required=True style="vertical" lookuplist="metadata.performer.performer_list" %}
