--- a/odonto/templates/records/fp17_dental_care_provider.html
+++ b/odonto/templates/records/fp17_dental_care_provider.html
@@ -41,3 +41,11 @@
   </div>
 </div>
 {% endif %}
+<div class="row">
+  <div class="col-md-3">
+    Associated dental professional:
+  </div>
+  <div class="col-md-9">
+    <b>[[ item.associated_dcp ]]</b>
+  </div>
+</div>
